# color_vlc

./: .gitignore  Cargo.toml  build.rs  make_play.bat
.github/workflows/: rust.yml
src/: decoder_main.rs  encoder_main.rs  gen_base.rs  lib.rs  yolo_test.rs
src/decoder/: mod.rs  standard.rs  yolo.rs
src/encoder/: mod.rs
src/encoder/qrcode/: mod.rs  qr_code.rs
src/shared/: mod.rs  qr_8bit_byte.rs  qr_bit_buffer.rs  qr_code_model.rs  qr_math.rs  qr_polynomial.rs  qr_rs_block.rs  qr_util.rs
train/: data.yaml  process_dataset.py  test_inference.py  train_yolo.py
